--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "hoek": "^5.0.3",
+    "node-sass": "^4.13.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-helmet": "^5.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.0.3"
+    "react-scripts": "3.4.1",
+    "react-tabs": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
