--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "hoek": "^5.0.3",
     "node-sass": "^4.13.1",
     "react": "^16.0.0",
+    "react-browser-frame": "^1.0.8",
     "react-dom": "^16.0.0",
     "react-helmet": "^5.2.0",
     "react-router": "^5.1.2",
