--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/tabs": "^0.10.1",
+    "framer-motion": "^2.0.0-beta.55",
     "hoek": "^5.0.3",
     "node-sass": "^4.13.1",
     "react": "^16.0.0",
@@ -11,8 +13,7 @@
     "react-helmet": "^5.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-tabs": "^3.1.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
