--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "dependencies": {
     "@reach/tabs": "^0.10.1",
-    "framer-motion": "^2.0.0-beta.55",
+    "framer-motion": "^4.0.3",
     "hoek": "^5.0.3",
     "node-sass": "^4.13.1",
-    "react": "^16.0.0",
+    "react": "^17.0.2",
     "react-browser-frame": "^1.0.9",
-    "react-dom": "^16.0.0",
-    "react-helmet": "^5.2.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
